assets/css/main.css
---
---

@import "tailwindcss";
@config "./tailwind.config.js";

body {
  @apply text-gray-700 dark:text-gray-300;
  font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, "Segoe UI",
    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
}

.btn-nav {
  @apply rounded-md px-3 py-1 text-base font-medium text-gray-900 dark:text-gray-200 hover:underline hover:underline-offset-4;
}

.btn-nav[aria-current="page"] {
  @apply underline underline-offset-4;
}

.post-content :is(p, li, td, th) a {
  @apply text-sky-700 hover:text-sky-500 dark:text-sky-500 dark:hover:text-sky-300 underline underline-offset-4;
}

.post-content {
  @apply px-5;
}

.post-content p {
  @apply py-3 text-lg;
}

.post-content ul li {
  @apply list-disc ml-5 py-1;
}

.post-content ol li {
  @apply list-decimal ml-5 py-1;
}

.post-content img {
  @apply rounded-lg my-3;
}

.post-content table {
  @apply w-full border-collapse;
}

.post-content table th,
.post-content table td {
  @apply px-4 py-2 border border-gray-300 dark:border-gray-700;
}

.post-content hr {
  @apply my-8 border-t-2 border-gray-300 dark:border-gray-900;
}

.post-content hr + h1,
.post-content hr + h2,
.post-content hr + h3,
.post-content hr + h4 {
  @apply pt-3;
}

blockquote {
  @apply px-4 my-2 border-l-4 border-gray-300 dark:border-gray-800;
}

.tag {
  @apply bg-gray-300 dark:bg-slate-800 py-0.5 px-1.5 rounded;
}

.post-content h1 {
  @apply text-4xl pt-8 pb-4 font-semibold;
}
.post-content h2 {
  @apply text-3xl pt-7 pb-4 font-semibold;
}
.post-content h3 {
  @apply text-2xl pt-6 pb-4 font-semibold;
}
.post-content h4 {
  @apply text-2xl pt-5 pb-4 font-semibold;
}
.post-content h5 {
  @apply text-lg pt-5 pb-4 font-semibold;
}
.post-content h6 {
  @apply mt-5 font-medium;
}

.highlight pre {
  @apply my-4 rounded-lg;
  padding: 10px 20px 10px 20px;
}

/*********** Github (light theme) ***********/
/* copied from https://raw.githubusercontent.com/jwarby/pygments-css/master/github.css */
.highlight pre { background-color: #f4f4f5; }
.highlight .hll { background-color: #ffffcc; }
.highlight .c { color: #999988; font-style: italic; } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2; } /* Error */
.highlight .k { color: #000000; font-weight: bold; } /* Keyword */
.highlight .o { color: #000000; font-weight: bold; } /* Operator */
.highlight .cm { color: #999988; font-style: italic; } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic; } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd; } /* Generic.Deleted */
.highlight .ge { color: #000000; font-style: italic; } /* Generic.Emph */
.highlight .gr { color: #aa0000; } /* Generic.Error */
.highlight .gh { color: #999999; } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd; } /* Generic.Inserted */
.highlight .go { color: #888888; } /* Generic.Output */
.highlight .gp { color: #555555; } /* Generic.Prompt */
.highlight .gs { font-weight: bold; } /* Generic.Strong */
.highlight .gu { color: #aaaaaa; } /* Generic.Subheading */
.highlight .gt { color: #aa0000; } /* Generic.Traceback */
.highlight .kc { color: #000000; font-weight: bold; } /* Keyword.Constant */
.highlight .kd { color: #000000; font-weight: bold; } /* Keyword.Declaration */
.highlight .kn { color: #000000; font-weight: bold; } /* Keyword.Namespace */
.highlight .kp { color: #000000; font-weight: bold; } /* Keyword.Pseudo */
.highlight .kr { color: #000000; font-weight: bold; } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold; } /* Keyword.Type */
.highlight .m { color: #009999; } /* Literal.Number */
.highlight .s { color: #d01040; } /* Literal.String */
.highlight .na { color: #008080; } /* Name.Attribute */
.highlight .nb { color: #0086b3; } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold; } /* Name.Class */
.highlight .no { color: #008080; } /* Name.Constant */
.highlight .nd { color: #3c5d5d; font-weight: bold; } /* Name.Decorator */
.highlight .ni { color: #800080; } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold; } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold; } /* Name.Function */
.highlight .nl { color: #990000; font-weight: bold; } /* Name.Label */
.highlight .nn { color: #555555; } /* Name.Namespace */
.highlight .nt { color: #000080; } /* Name.Tag */
.highlight .nv { color: #008080; } /* Name.Variable */
.highlight .ow { color: #000000; font-weight: bold; } /* Operator.Word */
.highlight .w { color: #bbbbbb; } /* Text.Whitespace */
.highlight .mf { color: #009999; } /* Literal.Number.Float */
.highlight .mh { color: #009999; } /* Literal.Number.Hex */
.highlight .mi { color: #009999; } /* Literal.Number.Integer */
.highlight .mo { color: #009999; } /* Literal.Number.Oct */
.highlight .sb { color: #d01040; } /* Literal.String.Backtick */
.highlight .sc { color: #d01040; } /* Literal.String.Char */
.highlight .sd { color: #d01040; } /* Literal.String.Doc */
.highlight .s2 { color: #d01040; } /* Literal.String.Double */
.highlight .se { color: #d01040; } /* Literal.String.Escape */
.highlight .sh { color: #d01040; } /* Literal.String.Heredoc */
.highlight .si { color: #d01040; } /* Literal.String.Interpol */
.highlight .sx { color: #d01040; } /* Literal.String.Other */
.highlight .sr { color: #009926; } /* Literal.String.Regex */
.highlight .s1 { color: #d01040; } /* Literal.String.Single */
.highlight .ss { color: #990073; } /* Literal.String.Symbol */
.highlight .bp { color: #999999; } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080; } /* Name.Variable.Class */
.highlight .vg { color: #008080; } /* Name.Variable.Global */
.highlight .vi { color: #008080; } /* Name.Variable.Instance */
.highlight .il { color: #009999; } /* Literal.Number.Integer.Long */

code.highlighter-rouge {
  background: #f4f4f5;
  padding: 1px 5px 1px 5px;
}

/*********** Monokai (dark theme) ***********/
/* copied from https://raw.githubusercontent.com/jwarby/pygments-css/master/monokai.css */
html.dark .highlight pre { color: #ffffff; background-color: #272822; }
html.dark .highlight .hll { background-color: #272822; }
html.dark .highlight .c { color: #75715e; } /* Comment */
html.dark .highlight .err { color: #960050; background-color: #1e0010; } /* Error */
html.dark .highlight .k { color: #66d9ef; } /* Keyword */
html.dark .highlight .l { color: #ae81ff; } /* Literal */
html.dark .highlight .n { color: #f8f8f2; } /* Name */
html.dark .highlight .o { color: #f92672; } /* Operator */
html.dark .highlight .p { color: #f8f8f2; } /* Punctuation */
html.dark .highlight .cm { color: #75715e; } /* Comment.Multiline */
html.dark .highlight .cp { color: #75715e; } /* Comment.Preproc */
html.dark .highlight .c1 { color: #75715e; } /* Comment.Single */
html.dark .highlight .cs { color: #75715e; } /* Comment.Special */
html.dark .highlight .ge { font-style: italic; } /* Generic.Emph */
html.dark .highlight .gs { font-weight: bold; } /* Generic.Strong */
html.dark .highlight .kc { color: #66d9ef; } /* Keyword.Constant */
html.dark .highlight .kd { color: #66d9ef; } /* Keyword.Declaration */
html.dark .highlight .kn { color: #f92672; } /* Keyword.Namespace */
html.dark .highlight .kp { color: #66d9ef; } /* Keyword.Pseudo */
html.dark .highlight .kr { color: #66d9ef; } /* Keyword.Reserved */
html.dark .highlight .kt { color: #66d9ef; } /* Keyword.Type */
html.dark .highlight .ld { color: #e6db74; } /* Literal.Date */
html.dark .highlight .m { color: #ae81ff; } /* Literal.Number */
html.dark .highlight .s { color: #e6db74; } /* Literal.String */
html.dark .highlight .na { color: #a6e22e; } /* Name.Attribute */
html.dark .highlight .nb { color: #f8f8f2; } /* Name.Builtin */
html.dark .highlight .nc { color: #a6e22e; } /* Name.Class */
html.dark .highlight .no { color: #66d9ef; } /* Name.Constant */
html.dark .highlight .nd { color: #a6e22e; } /* Name.Decorator */
html.dark .highlight .ni { color: #f8f8f2; } /* Name.Entity */
html.dark .highlight .ne { color: #a6e22e; } /* Name.Exception */
html.dark .highlight .nf { color: #a6e22e; } /* Name.Function */
html.dark .highlight .nl { color: #f8f8f2; } /* Name.Label */
html.dark .highlight .nn { color: #f8f8f2; } /* Name.Namespace */
html.dark .highlight .nx { color: #a6e22e; } /* Name.Other */
html.dark .highlight .py { color: #f8f8f2; } /* Name.Property */
html.dark .highlight .nt { color: #f92672; } /* Name.Tag */
html.dark .highlight .nv { color: #f8f8f2; } /* Name.Variable */
html.dark .highlight .ow { color: #f92672; } /* Operator.Word */
html.dark .highlight .w { color: #f8f8f2; } /* Text.Whitespace */
html.dark .highlight .mf { color: #ae81ff; } /* Literal.Number.Float */
html.dark .highlight .mh { color: #ae81ff; } /* Literal.Number.Hex */
html.dark .highlight .mi { color: #ae81ff; } /* Literal.Number.Integer */
html.dark .highlight .mo { color: #ae81ff; } /* Literal.Number.Oct */
html.dark .highlight .sb { color: #e6db74; } /* Literal.String.Backtick */
html.dark .highlight .sc { color: #e6db74; } /* Literal.String.Char */
html.dark .highlight .sd { color: #e6db74; } /* Literal.String.Doc */
html.dark .highlight .s2 { color: #e6db74; } /* Literal.String.Double */
html.dark .highlight .se { color: #ae81ff; } /* Literal.String.Escape */
html.dark .highlight .sh { color: #e6db74; } /* Literal.String.Heredoc */
html.dark .highlight .si { color: #e6db74; } /* Literal.String.Interpol */
html.dark .highlight .sx { color: #e6db74; } /* Literal.String.Other */
html.dark .highlight .sr { color: #e6db74; } /* Literal.String.Regex */
html.dark .highlight .s1 { color: #e6db74; } /* Literal.String.Single */
html.dark .highlight .ss { color: #e6db74; } /* Literal.String.Symbol */
html.dark .highlight .bp { color: #f8f8f2; } /* Name.Builtin.Pseudo */
html.dark .highlight .vc { color: #f8f8f2; } /* Name.Variable.Class */
html.dark .highlight .vg { color: #f8f8f2; } /* Name.Variable.Global */
html.dark .highlight .vi { color: #f8f8f2; } /* Name.Variable.Instance */
html.dark .highlight .il { color: #ae81ff; } /* Literal.Number.Integer.Long */
html.dark .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
html.dark .highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
html.dark .highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */

html.dark code.highlighter-rouge {
  background: #272822;
}

/* inline code blocks */
code.language-plaintext {
  @apply py-0.5 px-1 rounded my-0.5;
}

